# pyramid_noun

./: README.rst  setup.cfg  setup.py
pyramid_noun/scaffolds/: __init__.py
pyramid_noun/scaffolds/noun/: MANIFEST.in_tmpl  README.rst_tmpl  development.ini_tmpl  setup.cfg_tmpl
pyramid_noun/scaffolds/noun/+package+/: __init__.py_tmpl  avatar.py  security.py  views.py_tmpl
pyramid_noun/scaffolds/noun/+package+/i18n/: translater.py_tmpl
pyramid_noun/scaffolds/noun/+package+/models/: __init__.py  model.py_tmpl
pyramid_noun/scaffolds/noun/+package+/scripts/: populate.py_tmpl
pyramid_noun/scaffolds/noun/+package+/templates/: base.mako_tmpl  index.mako_tmpl
pyramid_noun/scaffolds/noun/+package+/views/: views.py_tmpl
