[metadata]
name = pyramid_noun
version = 0.1a
author = Gaston TJEBBES
author_email = g.t@majerti.fr
keywords = pyramid, scaffold, majerti, web
home_page = https://github.com/tonthon/pyramid_noun
project_url = 
    Source repository, https://github.com/tonthon/pyramid_noun
requires_dist = 
    pyramid
requires_python = >=2.7
description_file = README.rst                                                   
summary = Majerti's pyramid scaffold
license = GPLv3
classifier = 
    Development Status :: 3 - Alpha 
    License :: OSI Approved :: GNU General Public License (GPL)
    Intended Audience :: Developers 
    Framework :: Pyramid
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: WSGI

[files]
include_package_data = True
zip_safe = False
packages = pyramid_noun

[specific]
entry_points=[pyramid.scaffold]
    pyramid_noun=pyramid_noun.scaffolds:NounExtensionTemplate
test_suite=pyramid_noun
